# Telco_Customer_Churn

./: README.md  pyproject.toml
Telco_Customer_Churn/: README.md  pyproject.toml
Telco_Customer_Churn/data/processed/: telecom_limpio.parquet
Telco_Customer_Churn/notebooks/01_EDA/: 01_EDA.ipynb
Telco_Customer_Churn/notebooks/02_Machine_learning/: 02_Tabla_de_resultados.ipynb  03_Modelo_ML.ipynb
Telco_Customer_Churn/src/models/: modelo_pipeline.pkl
Telco_Customer_Churn/src/utils/: Funciones.py  Pipeline.py
notebooks/02_Machine_learning/: 02_Tabla_de_resultados.ipynb
notebooks/Prueba_de_Modelos/01_Regresión Logística/: 01_Regresion_Balanceado_con_pipline.ipynb
notebooks/Prueba_de_Modelos/02_Árboles de Decisión/: 02_Arboles_Balanceado_con_pipline.ipynb
notebooks/Prueba_de_Modelos/03_Random_Forest/: 02_Random_Balanceado_con_pipline.ipynb
notebooks/Prueba_de_Modelos/04_Gradient_Boosting/: 00_Gradient_Oversampling_Smote_con_pipline.ipynb  01_Gradient_Undersamping_con_pipline.ipynb  02_Gradient_Oversampling_SmoteTomekcon_pipline copy.ipynb  03_Gradient_Boosting_ADASYN.ipynb
notebooks/Prueba_de_Modelos/05_XGBoost_Classifier/: 02_XG_Balanceado_con_pipline.ipynb
notebooks/Prueba_de_Modelos/06_SVM/: 00_SVM_Balanceado_Oversampling_con_pipline.ipynb  01_SVM_Balanceado_Undersampling_con_pipline copy.ipynb  02_SVM_Balanceado_Oversampling_SmoteTomek_con_pipline copy 2.ipynb
notebooks/Prueba_de_Modelos/07_MLP_Classifier/: 02_MLP_Balanceado_con_pipline.ipynb
src/utils/: Funciones.py  Pipeline.py
(+12 files in other folders)
