
[tool.poetry]
name = "ML"
version = "0.1.0"
description = "Proyecto de Machine Learning"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^2.1.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
nbformat = "^5.10.4"
shad = "^0.1.5"
xgboost = "^2.1.4"
panda = "^0.3.1"
imbalanced-learn = "^0.13.0"
textblob = "^0.19.0"
grpcio = "^1.71.0"
pyarrow = "^19.0.1"
shap = "^0.47.0"
kneed = "^0.8.5"
hdbscan = "^0.8.40"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
ruff = "^0.1.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py311']
